--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,45 @@
 /* General Styles */
 
 *{
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 body{
-    font-family: 'helvetica-neue', helvetica, arial, sans-serif;
-    font-size: 16px;
+  font-family: 'helvetica-neue', helvetica, arial, sans-serif;
+  font-size: 16px;
 }
 .container{
-    width: 960px;
-    margin: 20px auto;
+  width: 960px;
+  margin: 20px auto;
 }
 label{
   display: block;
 }
 input{
-    min-width: 300px;
-    height: 30px;
-    border: 1px solid black;
-    padding-left: 8px;
-    font-size: 1em;
+  display: block;
+  min-width: 300px;
+  height: 30px;
+  border: 1px solid black;
+  padding-left: 8px;
+  font-size: 1em;
 }
 button{
-    height: 32px;
-    padding-right: 12px;
-    padding-left: 12px;
-    border: none;
-    font-size: 1em;
+  height: 32px;
+  padding-right: 12px;
+  padding-left: 12px;
+  border: none;
+  font-size: 1em;
 }
 button:hover{
-    cursor: pointer;
+  cursor: pointer;
+}
+
+h1{
+  font-size: 24px;
+}
+
+h3{
+  font-size: 16px;
 }
 
 /* End of General Styles */
@@ -40,18 +49,57 @@ button:hover{
     * Use bottom spacing on everything else
 */
 
+
+/* Margin Styles */
 .margin-top-10{
   margin-top: 10px;
 }
-
 .margin-top-20{
   margin-top: 20px;
 }
-
 .margin-bottom-10{
   margin-bottom: 10px;
 }
-
 .margin-bottom-20{
   margin-bottom: 20px;
 }
+
+/* Padding Styles */
+
+.padding-top-10{
+  padding-top: 10px;
+}
+.padding-top-20{
+  padding-top: 20px;
+}
+.padding-bottom-10{
+  padding-bottom: 10px;
+}
+.padding-bottom-20{
+  padding-bottom: 20px;
+}
+.padding-left-10{
+  padding-left: 10px;
+}
+.padding-left-20{
+  padding-bottom: 20px;
+}
+.padding-right-10{
+  padding-bottom: 10px;
+}
+.padding-right-20{
+  padding-bottom: 20px;
+}
+
+/* End of Spacing Styles */
+
+/* Form Classes */
+
+.print_answer{
+  min-height: 100px;
+  width: 308px;
+  background-color: white;
+  border: 1px solid black;
+}
+
+/* End of Form Classes */
