--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-/* General Styles */
-
+/* General Styles
+    * This may not be sustainable as the app grows.
+    * If styles start to leak, use only classes on elements
+    * And prefix every class
+*/
 *{
   margin: 0;
   padding: 0;
@@ -11,6 +14,10 @@ body{
 .container{
   width: 960px;
   margin: 20px auto;
+}
+a{
+  font-size: 1em;
+  text-decoration: none;
 }
 label{
   display: block;
@@ -25,6 +32,7 @@ input{
 }
 button{
   height: 32px;
+  /* Special case of element specific spacing */
   padding-right: 12px;
   padding-left: 12px;
   border: none;
@@ -33,24 +41,20 @@ button{
 button:hover{
   cursor: pointer;
 }
-
 h1{
   font-weight: bold;
-  font-size: 24px;
+  font-size: 1.5em;
 }
-
 h3{
   font-weight: normal;
-  font-size: 16px;
+  font-size: 1em;
 }
-
 /* End of General Styles */
 
-/* Spacing Styles
+/* Utility Classes
     * Only use top spacing on top most element
     * Use bottom spacing on everything else
 */
-
 
 /* Margin Styles */
 .margin-top-10{
@@ -65,9 +69,19 @@ h3{
 .margin-bottom-20{
   margin-bottom: 20px;
 }
-
+.margin-left-10{
+  margin-left: 10px;
+}
+.margin-left-20{
+  margin-left: 20px;
+}
+.margin-right-10{
+  margin-right: 10px;
+}
+.margin-right-20{
+  margin-right: 20px;
+}
 /* Padding Styles */
-
 .padding-top-10{
   padding-top: 10px;
 }
@@ -92,16 +106,45 @@ h3{
 .padding-right-20{
   padding-bottom: 20px;
 }
+/* End of Utility Classes */
 
-/* End of Spacing Styles */
+/* Nav Classes
+    * Classes and their hover states
+    * are grouped based on the element
+    * e.g. button_submit{},
+    *      button_submit:hover{}
+*/
+.link_active{
+  font-weight: bold;
 
-/* Form Classes */
+}
+/* End of Nav Classes */
 
+/* Form Classes
+    * Classes and their hover states
+    * are grouped based on the element
+    * e.g. button_submit{},
+    *      button_submit:hover{}
+*/
 .print_answer{
   min-height: 75px;
   width: 300px;
   background-color: #fafbfc;
   border-bottom: 1px solid black;
 }
-
+.submit_button{
+  background: black;
+  color: white;
+}
+.submit_button:hover{
+  box-shadow: 0px 2px 6px #a9a9a9;
+  transition: .13s;
+}
+.clear_button{
+  background: none;
+  border: 1px solid black;
+}
+.clear_button:hover{
+  background-color: #fafbfc;
+}
 /* End of Form Classes */
